Ariel Needs to thank his funding agency.

--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -535,7 +535,7 @@ We have described the Dipy library for analysis of diffusion MRI data. Dipy is a
 \end{figure*}
 
 \section*{Acknowledgments}
-Who do we need to acknowledge?
+Ariel Rokem is funded by a National Research Service Award (NEI F32 EY022294).
 
 \section*{Disclosure/Conflict-of-Interest Statement}
 There are no conflicts of interest.
