Fix teletype text.

--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -356,7 +356,7 @@ approximate the underlying anatomy.
 \section{General design aspects}
 
 Dipy is built on the SciPy tool stack, which includes packages such as
-\tt{numpy} (numerical arrays and array computation), \tt{scipy}
+numpy (numerical arrays and array computation), scipy
 (scientific libraries, e.g. optimization, triangulation, special functions,
 and more) and Cython (an optimized Python to C compiler, used to achieve
 native performance).  Furthermore, it integrates into the NiPy (neuroimaging
