--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -105,6 +105,7 @@ emphstyle={\color{self}\slshape},
   Maxime~Descoteaux\,$^{2}$, Ian~Nimmo-Smith\,$^{6}$ and Dipy~Contributors
   $^{8}$\footnote{to whom correspondence should be addressed. e-mail:
     garyfallidis@gmail.com}}
+
 \address{\,$^{1}$University of Cambridge, Cambridge, UK\\
   \,$^{2}$University of Sherbrooke, Sherbrooke, CA\\
   \,$^{3}$University of California, Henry H. Wheeler, Jr. Brain Imaging Center, Berkeley, CA.\\
@@ -159,7 +160,7 @@ Spherical Deconvolution, Medical imaging, Free Open Source Software,
 Deterministic tractography, Probabilistic tractography, Fiber tracking, Medical
 Visualization.
 
-end{abstract}
+\end{abstract}
 
 \section{Skeleton}
 Here is a possible outline for the paper:
