Changed label in table

--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -1132,9 +1132,9 @@ line_actor = fvtk.pretty_line(streamlines,
 fvtk.add(renderer, line_actor)
 fvtk.show(renderer) 
 \end{python}
-The complete list of visualization function is given in \ref{Table_1}.
+The most commonly used visualization functions are given in \ref{fvtk_table}.
 
-\begin{table}[th] \processtable{List of visualization functions\label{Table_1}} 
+\begin{table}[th] \processtable{List of visualization functions\label{fvtk_table}} 
 {\begin{tabular}{rr}
 Name & Usage \\ \hline
 ren & create renderer\\ \hline
